--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,6 +76,8 @@
 }
 
 
+
+
 /*** Navbar ***/
 .navbar-dark .navbar-nav .nav-link {
     margin-right: 30px;
@@ -84,6 +86,7 @@
     font-size: 15px;
     text-transform: uppercase;
     outline: none;
+    
     
 }
 
@@ -501,14 +504,40 @@
     right: 20px;
     /* background-color: #25d366; */
     padding: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
     z-index: 1000; /* Ensure the button is above other elements */
   }
-  
-  .whatsapp-icon {
-    width: 40px;
-    height: 40px;
+
+  .whatsapp-button a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+    background-color: #25d366;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    animation: jump 1s infinite;
   }
+  
+  @keyframes jump {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+  }
+  
+
+
+
+
+
+
 
 /* contact  */
 
@@ -519,4 +548,7 @@
 .form-floating input {
     padding-left: 2.5rem; /* Adjust padding to make space for the icon */
   }
+  
+
+
   
