--- a/src/css/style.css
+++ b/src/css/style.css
@@ -548,7 +548,28 @@
 .form-floating input {
     padding-left: 2.5rem; /* Adjust padding to make space for the icon */
   }
+ 
   
+  /* gallery */
 
-
+  .gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    padding: 20px;
+  }
+  
+  .gallery-item {
+    flex: 1 1 calc(33.333% - 20px); /* Adjust based on the number of items per row */
+    margin: 10px;
+  }
+  
+  .gallery-image {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
   
