--- a/src/css/style.css
+++ b/src/css/style.css
@@ -425,10 +425,10 @@ body {
 
 
 /*** Footer ***/
-.newsletter {
+/* .newsletter {
     position: relative;
     z-index: 1;
-}
+} */
 
 .footer {
     position: relative;
